--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <header class="primary-header">
     <div class="container">
-      <a href="#"><img src="images/logo.svg" alt="manage"></a>
+      <a href="#"><img src="images/logo.svg" alt="Manage"></a>
       <nav class="primary-navigation">
-        <ul role="list" class="nav-list">
+        <ul aria-label="Primary" role="list" class="nav-list">
           <li><a href="#">Pricing</a></li>
           <li><a href="#">Product</a></li>
           <li><a href="#">About Us</a></li>
@@ -98,6 +98,45 @@
       </div>
     </section>
   </main>
+
+  <footer class="bg-neutral-900 text-neutral-100">
+    <div class="container">
+      <div class="even-columns">
+
+        <div>
+          <a href="#"><img src="images/logo.svg" alt="Manage"></a>
+          <ul role="list" aria-label="Social media links">
+            <li><a aria-label="facebook" href="#"></a></li>
+            <li><a aria-label="youtube" href="#"></a></li>
+            <li><a aria-label="twitter" href="#"></a></li>
+            <li><a aria-label="pinterest" href="#"></a></li>
+            <li><a aria-label="instagram" href="#"></a></li>
+          </ul>
+        </div>
+
+        <div>
+          <nav aria-label="Footer" class="footer-nav">
+            <ul role="list">
+              <li><a href="#"></a>Home</li>
+              <li><a href="#"></a>Pricing</li>
+              <li><a href="#"></a>Products</li>
+              <li><a href="#"></a>About Us</li>
+              <li><a href="#"></a>Careers</li>
+              <li><a href="#"></a>Community</li>
+              <li><a href="#"></a>Privacy Policy</li>
+            </ul>
+          </nav>
+        </div>
+
+        <div>
+          <form action="">
+            <input type="email"><button class="button">Go</button>
+          </form>
+          <p>Copyright 2050. All Rights Reserved</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script type="module" src="/main.js"></script>
 </body>
