--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <section class="carousel | padding-block-700">
-      <h2 class="fs-secondary-heading">What they've said</h2>
+      <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
       <!-- Carousel here -->
       <button class="button">Get Started</button>
     </section>
@@ -99,7 +99,7 @@
     </section>
   </main>
 
-  <footer class="bg-neutral-900 text-neutral-100">
+  <footer class="padding-block-700 bg-neutral-900 text-neutral-100">
     <div class="container">
       <div class="even-columns">
 
