--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       <div class="container">
         <div class="even-columns vertical-align-centre">
           <div>
-            <p class="fs-secondary-heading fw-bold">Simplify how your team works today.</p>
+            <p class="fs-primary-heading fw-bold">Simplify how your team works today.</p>
           </div>
-          <div class="justify-self-end"><button class="button" data-type="inverted">Get Started</button></div>
+          <div class="justify-self-end-md"><button class="button" data-type="inverted">Get Started</button></div>
         </div>
       </div>
     </section>
