--- a/index.html
+++ b/index.html
@@ -118,32 +118,49 @@
   <footer class="padding-block-700 bg-neutral-900 text-neutral-100">
     <div class="container">
       <div class="even-columns">
-
         <div>
           <a href="#"><img src="images/logo.svg" alt="Manage"></a>
           <ul role="list" aria-label="Social media links">
-            <li><a aria-label="facebook" href="#"></a></li>
-            <li><a aria-label="youtube" href="#"></a></li>
-            <li><a aria-label="twitter" href="#"></a></li>
-            <li><a aria-label="pinterest" href="#"></a></li>
-            <li><a aria-label="instagram" href="#"></a></li>
+            <li><a aria-label="facebook" href="#">
+                <svg class="icon">
+                  <use xlink:href="images/social-icons.svg#icon-facebook"></use>
+                </svg></a>
+            </li>
+            <li><a aria-label="youtube" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-youtube"></use>
+                </svg></a>
+            </li>
+            <li><a aria-label="twitter" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-twitter"></use>
+                </svg></a>
+            </li>
+            <li><a aria-label="pinterest" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
+                </svg></a>
+            </li>
+            <li><a aria-label="instagram" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-instagram"></use>
+                </svg></a>
+            </li>
           </ul>
         </div>
-
         <div>
-          <nav aria-label="Footer" class="footer-nav">
+          <nav class="footer-nav" aria-label="Footer">
             <ul class="flow" style="--flow-spacer: 1em" role="list">
-              <li><a href="#"></a>Home</li>
-              <li><a href="#"></a>Pricing</li>
-              <li><a href="#"></a>Products</li>
-              <li><a href="#"></a>About Us</li>
-              <li><a href="#"></a>Careers</li>
-              <li><a href="#"></a>Community</li>
-              <li><a href="#"></a>Privacy Policy</li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Community</a></li>
+              <li><a href="#">Privacy Policy</a></li>
             </ul>
           </nav>
         </div>
-
         <div>
           <form action="">
             <input type="email"><button class="button">Go</button>
