--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
       <div class="even-columns">
         <div>
           <a href="#"><img src="images/logo.svg" alt="Manage"></a>
-          <ul role="list" aria-label="Social media links">
+          <ul class="social-list" role="list" aria-label="Social media links">
             <li><a aria-label="facebook" href="#">
-                <svg class="icon">
+                <svg class="social-icon">
                   <use xlink:href="images/social-icons.svg#icon-facebook"></use>
                 </svg></a>
             </li>
