--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <header class="primary-header">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="#"><img src="images/logo.svg" alt="Manage"></a>
+        <a href="#">
+          <svg class="logo" width="146" height="24">
+            <use xlink:href="images/logo.svg#logo"></use>
+          </svg>
+        </a>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
           <img class="icon-hamburger" src="images/icon-hamburger.svg" alt="" aria-hidden="true">
           <img class="icon-close" src="images/icon-close.svg" alt="" aria-hidden="true">
@@ -115,11 +119,15 @@
     </section>
   </main>
 
-  <footer class="padding-block-700 bg-neutral-900 text-neutral-100">
+  <footer class="primary-footer | padding-block-700 bg-neutral-900 text-neutral-100">
     <div class="container">
       <div class="even-columns">
         <div>
-          <a href="#"><img src="images/logo.svg" alt="Manage"></a>
+          <a href="#" aria-label="home">
+            <svg class="logo" width="146" height="24">
+              <use xlink:href="images/logo.svg#logo"></use>
+            </svg>
+          </a>
           <ul class="social-list" role="list" aria-label="Social media links">
             <li><a aria-label="facebook" href="#">
                 <svg class="social-icon">
