Re-organises the footer nav for different displays

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
   <footer class="primary-footer | padding-block-700 bg-neutral-900 text-neutral-100">
     <div class="container">
-      <div class="even-columns">
-        <div>
+      <div class="primary-footer-wrapper">
+        <div class="primary-footer-logo-social">
           <a href="#" aria-label="home">
             <svg class="logo" width="146" height="24">
               <use xlink:href="images/logo.svg#logo"></use>
@@ -156,7 +156,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="primary-footer-nav">
           <nav class="footer-nav" aria-label="Footer">
             <ul class="flow" style="--flow-spacer: 1em" role="list">
               <li><a href="#">Home</a></li>
@@ -169,7 +169,7 @@
             </ul>
           </nav>
         </div>
-        <div>
+        <div class="primary-footer-form">
           <form action="">
             <input type="email"><button class="button">Go</button>
           </form>
