--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="primary-footer-form">
           <form action="">
-            <input type="email"><button class="button">Go</button>
+            <input type="email"><button class="button" data-shadow="none">Go</button>
           </form>
           <p>Copyright 2050. All Rights Reserved</p>
         </div>
