--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" />
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -106,7 +107,13 @@
 
     <section class="carousel | padding-block-700">
       <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
-      <!-- Carousel here -->
+
+      <ul class="slider">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+      </ul>
       <button class="button">Get Started</button>
     </section>
 
@@ -182,6 +189,7 @@
     </div>
   </footer>
 
+  <script src="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
