--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </header>
 
   <main>
-    <section class="padding-block-900">
+    <section class="hero | text-centre-sm-only padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div class="flow">
@@ -50,8 +50,8 @@
               view.</p>
             <button class="button">Get Started</button>
           </div>
-          <div>
-            <img src="images/illustration-intro.svg" alt="">
+          <div class="hero__image">
+            <img class="mx-auto" src="images/illustration-intro.svg" alt="">
           </div>
         </div>
       </div>
