--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
     </section>
 
-    <section class="carousel | padding-block-700 text-centre">
+    <section class="carousel | padding-block-900 text-centre">
       <h2 class="fs-secondary-heading fw-bold">What they've said</h2>
 
       <ul class="slider">
@@ -151,7 +151,7 @@
       <button class="button">Get Started</button>
     </section>
 
-    <section class="cta | padding-block-900 bg-accent-400 text-neutral-100">
+    <section class="cta | margin-top-900 padding-block-900 bg-accent-400 text-neutral-100">
       <div class="container">
         <div class="even-columns vertical-align-centre">
           <div>
